download pkg from master && prepare to support install2 api
